# ring-zk

./: Cargo.toml  README.md
.github/scripts/: extract-benchmarks.sh
.github/workflows/: build_and_test.yml
benches/: bench.rs
dev/bench/: data.js
src/: challenge_space.rs  commit.rs  lib.rs  mat.rs  params.rs  polynomial.rs  prove.rs
src/prove/: linear.rs  mod.rs  open.rs  sum.rs
tests/: test.rs
